--- a/RxFair/Utility/appsettings.json
+++ b/RxFair/Utility/appsettings.json
@@ -20,16 +20,16 @@
         "SmtpEnableSsl": true,
         "isSendGrid": true
     },
-    "EmailSettingsGmail": {
-        "SmtpUserName": "narolamma@gmail.com",
-        "SmtpHost": "smtp.gmail.com",
-        "SmtpSenderEmail": "narolamma@gmail.com",
-        "SmtpPassword": "Password123#",
-        "SmtpSenderName": "RxFair",
-        "SmtpPort": "587",
-        "SenderName": "RxFair",
-        "SmtpEnableSsl": true
-    },
+  "EmailSettingsGmail": {
+    "SmtpUserName": "shoprxny@gmail.com",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpSenderEmail": "shoprxny@gmail.com",
+    "SmtpPassword": "Password123#",
+    "SmtpSenderName": "RxFair",
+    "SmtpPort": "587",
+    "SenderName": "RxFair",
+    "SmtpEnableSsl": true
+  },
     "AzureStorage": {
         "StorageConnection": "UseDevelopmentStorage=true"
     },
