--- a/RxFair/appsettings.Development.json
+++ b/RxFair/appsettings.Development.json
@@ -23,10 +23,10 @@
     "isSendGrid": true
   },
   "EmailSettingsGmail": {
-    "SmtpUserName": "narolamma@gmail.com",
+    "SmtpUserName": "shoprxny@gmail.com",
     "SmtpHost": "smtp.gmail.com",
-    "SmtpSenderEmail": "narolamma@gmail.com",
-    "SmtpPassword": "Password123#",
+    "SmtpSenderEmail": "shoprxny@gmail.com",
+    "SmtpPassword": "shdpcaafwjscwdhg",
     "SmtpSenderName": "ShopRx",
     "SmtpPort": "587",
     "SenderName": "ShopRx",
